--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
+
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/normalize.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
 
   <title>Cinemaddict</title>
 </head>
@@ -22,6 +22,6 @@
   <section class="footer__logo logo logo--smaller">Cinemaddict</section>
   <section class="footer__statistics"></section>
 </footer>
-<script src="/bundle.js"></script>
+<script src="./bundle.js"></script>
 </body>
 </html>
